Renamed the title of site.

--- a/BootStrap/BootStrap.html
+++ b/BootStrap/BootStrap.html
@@ -3,7 +3,7 @@
 
 <head>
      <meta charset="UTF-8">
-     <title>TITLE</title>
+     <title>Jacob Stevens Bootstrap Tutorial</title>
      <meta name="description" content="DESCRIPTION">
     <link rel="stylesheet" href="PATH">
 
