added new files

--- a/JavaScript/ArithmaticOperator.html
+++ b/JavaScript/ArithmaticOperator.html
@@ -24,6 +24,10 @@
         document.write(linebreak)
         document.write("b-- = ",b--)
         document.write(linebreak)
+        document.write("++a = ",++a)
+        document.write(linebreak)
+        document.write("--b = ",--b)
+        document.write(linebreak)
     </script>
 </head>
 <body>
